--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="images/dh-logo.svg" alt="Dane Hamblin logo">
+      <img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo">
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
@@ -20,7 +20,7 @@
     </header>
     <main>
       <section class="contact">
-
+          <h1>Contact</h1>
       </section>
     </main>
 </body>
