add nav html & css

--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Dane Hamblin | Artist Website</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <header class="logo">
-      <img src="images/icons/dh-logo.svg" alt="Dane Hamblin logo">
-      <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <img src="images/cityscapes/glebe-apothecary.jpg" alt="Background Image">
-      <section class="about">
-        <h1 id="about">About</h1>
-        <img class="profile" src="images/icons/profile-picture.jpg" alt="Dane Hamblin Profile Picture">
-        <h3>Oil/Watercolor/Acrylic realist painter</h3>
-        <p>Dane Hamblin was born in Phoenix, Arizona in the United States and graduated with a degree in Fine Arts specializing in painting from Arizona State University in 2002. Dane is an oil and watercolor painter who enjoyed the challenges of intensely realistic painting. Dane’s subject matter ranges widely to include still-life and wildlife paintings, but he considers himself to be first and foremost an urban landscape painter. He has participated in group and solo exhibitions in Arlington, Virginia; Kuwait City, Kuwait; Pretoria, South Africa; and Nairobi, Kenya. Most recently Dane had a solo exhibition at the US Embassy in Rome, Italy in 2020.
-        </p>
-      </section>
-    </main>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Dane Hamblin | Artist Website</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header class="header">
+  <h1 class=""><img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo"></h1>
+  <input type="checkbox" id="nav-toggle" class="nav-toggle">
+  <label for="nav-toggle" class="nav-toggle-label">
+    <span></span>
+  </label>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+  <main role="main" class="content">
+    <img src="images/cityscapes/glebe-apothecary.jpg" alt="Background Image">
+    <section class="about">
+      <h1 id="about">About</h1>
+      <img class="profile" src="images/icons/profile-picture.jpg" alt="Dane Hamblin Profile Picture">
+      <h3>Oil/Watercolor/Acrylic realist painter</h3>
+      <p>Dane Hamblin was born in Phoenix, Arizona in the United States and graduated with a degree in Fine Arts specializing in painting from Arizona State University in 2002. Dane is an oil and watercolor painter who enjoyed the challenges of intensely realistic painting. Dane’s subject matter ranges widely to include still-life and wildlife paintings, but he considers himself to be first and foremost an urban landscape painter. He has participated in group and solo exhibitions in Arlington, Virginia; Kuwait City, Kuwait; Pretoria, South Africa; and Nairobi, Kenya. Most recently Dane had a solo exhibition at the US Embassy in Rome, Italy in 2020.
+      </p>
+    </section>
+  </main>
+  <footer role="contentinfo">Dane Hamblin 2022</footer>
+</body>
 </html>
