--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Dane Hamblin | Artist Website</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo">
-      <nav>
-        <ul>
-          <li><a href="index.html">About</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section class="contact">
-          <h1>Contact</h1>
-      </section>
-    </main>
+<head>
+  <meta charset="utf-8">
+  <title>Dane Hamblin | Artist Website</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
+</head>
+<body>
+  <!-- <header>
+    <img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo">
+    <nav role="navigation">
+      <ul>
+        <li><a href="index.html">About</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header> -->
+  <header class="header">
+  <h1 class=""><img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo"></h1>
+  <input type="checkbox" id="nav-toggle" class="nav-toggle">
+  <label for="nav-toggle" class="nav-toggle-label">
+    <span></span>
+  </label>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  </header>
+  <main role="main" class="content">
+    <section class="contact">
+      <h1>Contact</h1>
+    </section>
+  </main>
+  <footer role="contentinfo">Dane Hamblin 2022</footer>
 </body>
 </html>
