--- a/gallery.html
+++ b/gallery.html
@@ -8,17 +8,31 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="logo">
-    <img src="images/icons/dh-logo.svg" alt="Dane Hamblin logo">
-    <nav>
+  <!-- <header>
+    <img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo">
+    <nav role="navigation">
       <ul>
         <li><a href="index.html">About</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-  </header>
-  <main>
+  </header> -->
+  <header class="header">
+  <h1 class=""><img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo"></h1>
+  <input type="checkbox" id="nav-toggle" class="nav-toggle">
+  <label for="nav-toggle" class="nav-toggle-label">
+    <span></span>
+  </label>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+  <main role="main" class="content">
     <section>
       <h1>Gallery</h1>
       <section class="cityscapes">
@@ -189,5 +203,6 @@
       </section>
     </section>
   </main>
+  <footer role="contentinfo">Dane Hamblin 2022</footer>
 </body>
 </html>
