add svg with background image to index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </nav>
 </header>
   <main role="main" class="content">
-    <img src="images/cityscapes/glebe-apothecary.jpg" alt="Background Image">
+    <img class="backimg" src="images/icons/dh-signature.svg">
     <section class="about">
       <h1 id="about">About</h1>
       <img class="profile" src="images/icons/profile-picture.jpg" alt="Dane Hamblin Profile Picture">
