add contact.html form and media queries

--- a/gallery.html
+++ b/gallery.html
@@ -8,16 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- <header>
-    <img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo">
-    <nav role="navigation">
-      <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header> -->
   <header class="header">
   <h1 class=""><img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo"></h1>
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -32,9 +22,8 @@
     </ul>
   </nav>
 </header>
-  <main role="main" class="content">
-    <section>
-      <h1>Gallery</h1>
+  <main role="main" class="content gallery-content">
+      <h1 class="title">Gallery</h1>
       <section class="cityscapes">
         <h3>Cityscapes</h3>
         <div>
@@ -201,7 +190,6 @@
           <p><b>11"x17" print: $50</b></p>
         </div>
       </section>
-    </section>
   </main>
   <footer role="contentinfo">Dane Hamblin 2022</footer>
 </body>
