--- a/contact.html
+++ b/contact.html
@@ -8,33 +8,34 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- <header>
-    <img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo">
-    <nav role="navigation">
+  <header class="header">
+    <h1 class=""><img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo"></h1>
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <label for="nav-toggle" class="nav-toggle-label">
+      <span></span>
+    </label>
+    <nav>
       <ul>
-        <li><a href="index.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-  </header> -->
-  <header class="header">
-  <h1 class=""><img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo"></h1>
-  <input type="checkbox" id="nav-toggle" class="nav-toggle">
-  <label for="nav-toggle" class="nav-toggle-label">
-    <span></span>
-  </label>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
   </header>
-  <main role="main" class="content">
-    <section class="contact">
+  <main role="main" class="contact">
+    <section class="contact-form">
       <h1>Contact</h1>
+      <form action="/form_page.php">
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname" value="" placeholder="First Name"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname" value="" placeholder="Last Name"><br><br>
+        <label for="email">E-mail Address:</label><br>
+        <input type="text" id="email" name="email" value="" placeholder="E-mail"><br><br>
+        <label for="message">Message to the Artist:</label><br>
+        <input type="text" id="message" name="message" value="" placeholder="Include painting name"><br><br>
+        <input type="submit" id="submit" value="Submit">
+      </form>
     </section>
   </main>
   <footer role="contentinfo">Dane Hamblin 2022</footer>
