--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <section class="about">
       <h1 id="about">About</h1>
       <img class="profile" src="images/icons/profile-picture.jpg" alt="Dane Hamblin Profile Picture">
-      <h3 class="title">Oil/Watercolor/Acrylic realist painter</h3>
-      <p class="desc">Dane Hamblin was born in Phoenix, Arizona in the United States and graduated with a degree in Fine Arts specializing in painting from Arizona State University in 2002. Dane is an oil and watercolor painter who enjoyed the challenges of intensely realistic painting. Dane’s subject matter ranges widely to include still-life and wildlife paintings, but he considers himself to be first and foremost an urban landscape painter. He has participated in group and solo exhibitions in Arlington, Virginia; Kuwait City, Kuwait; Pretoria, South Africa; and Nairobi, Kenya. Most recently Dane had a solo exhibition at the US Embassy in Rome, Italy in 2020.
+      <h3 class="title-about">Oil/Watercolor/Acrylic realist painter</h3>
+      <p class="desc-about">Dane Hamblin was born in Phoenix, Arizona in the United States and graduated with a degree in Fine Arts specializing in painting from Arizona State University in 2002. Dane is an oil and watercolor painter who enjoyed the challenges of intensely realistic painting. Dane’s subject matter ranges widely to include still-life and wildlife paintings, but he considers himself to be first and foremost an urban landscape painter. He has participated in group and solo exhibitions in Arlington, Virginia; Kuwait City, Kuwait; Pretoria, South Africa; and Nairobi, Kenya. Most recently Dane had a solo exhibition at the US Embassy in Rome, Italy in 2020.
       </p>
     </section>
   </main>
