--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="header">
+  <header role="banner" class="header">
   <h1 class=""><img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo"></h1>
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <label for="nav-toggle" class="nav-toggle-label">
@@ -191,6 +191,10 @@
         </div>
       </section>
   </main>
-  <footer role="contentinfo">Dane Hamblin 2022</footer>
+  <footer role="contentinfo" class="footer">
+    <a href="https://www.instagram.com/danehamblin_art/"><img src="images/icons/instagram-logo.svg.webp"></a>
+    <p>©Dane Hamblin 2022</p>
+    <a href="https://www.facebook.com/danehamblin/"><img src="images/icons/Facebook-logo.png"></a>
+  </footer>
 </body>
 </html>
