add html alt tags and css img hover

--- a/gallery.html
+++ b/gallery.html
@@ -9,187 +9,189 @@
 </head>
 <body>
   <header role="banner" class="header">
-  <h1 class=""><img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo"></h1>
-  <input type="checkbox" id="nav-toggle" class="nav-toggle">
-  <label for="nav-toggle" class="nav-toggle-label">
-    <span></span>
-  </label>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
+    <h1 class=""><img class="logo" src="images/icons/dh-logo.svg" alt="Dane Hamblin logo"></h1>
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <label for="nav-toggle" class="nav-toggle-label">
+      <span></span>
+    </label>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   <main role="main" class="content gallery-content">
-      <h1 class="title">Gallery</h1>
-      <section class="cityscapes">
-        <h3>Cityscapes</h3>
-        <div>
-          <img src="images/cityscapes/aberdeen-pavilion.jpg" alt="">
-          <p>Aberdeen Pavilion</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/cityscapes/bank-street-1.jpg" alt="">
-          <p>Bank Street 1</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/cityscapes/irenes-pub.jpg" alt="">
-          <p>Irene's Pub</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/cityscapes/smiths-bar.jpg" alt="">
-          <p>Smith's Bar</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/cityscapes/wild-oat.jpg" alt="">
-          <p>Wild Oat</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/cityscapes/escalator-1.jpg" alt="">
-          <p>Escalator 1</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-      </section>
-      <section class="vehicles">
-        <h3>Vehicles</h3>
-        <div>
-          <img src="images/vehicles/tram-9.jpg" alt="">
-          <p>Tram 9</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/vehicles/vespa.jpg" alt="">
-          <p>Vespa</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/vehicles/cinquecento.jpg" alt="">
-          <p>Cinquecento</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/vehicles/59 Dodge.jpg" alt="">
-          <p>59 Dodge</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-      </section>
-      <section class="flora">
-        <h3>Flora</h3>
-        <div>
-          <img src="images/flora/artichokes.jpg" alt="">
-          <p>Artichokes</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/flora/asparagus.jpg" alt="">
-          <p>Asparagus</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/flora/autumn-leaves-1.jpg" alt="">
-          <p>Autumn Leaves 1</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/flora/autumn-leaves-2.jpg" alt="">
-          <p>Autumn Leaves 2</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/flora/pomodori-oil.jpg" alt="">
-          <p>Pomodori</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/flora/pomodori-watercolor.jpg" alt="">
-          <p>Pomodori</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-      </section>
-      <section class="fauna">
-        <h3>Cityscapes</h3>
-        <div>
-          <img src="images/fauna/Giraffe.jpg" alt="">
-          <p>Giraffe</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/fauna/hornbill.jpg" alt="">
-          <p>Hornbill</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/fauna/kingfisher.jpg" alt="">
-          <p>Kingfisher</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/fauna/kudu.jpg" alt="">
-          <p>Kudu</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/fauna/rhino.jpg" alt="">
-          <p>Rhino</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/fauna/starling.jpg" alt="">
-          <p>Starling</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/fauna/tawny-eagle.jpg" alt="">
-          <p>Tawny Eagle</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-        <div>
-          <img src="images/fauna/zebra-1.jpg" alt="">
-          <p>Zebra 1</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div><div>
-          <img src="images/fauna/zebra-2.jpg" alt="">
-          <p>Zebra 2</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div><div>
-          <img src="images/fauna/zebras.jpg" alt="">
-          <p>Zebras</p>
-          <p><b>Original Painting: $1000</b></p>
-          <p><b>11"x17" print: $50</b></p>
-        </div>
-      </section>
+    <h1 class="title">Gallery</h1>
+    <section class="cityscapes">
+      <h3>Cityscapes</h3>
+      <div>
+        <img src="images/cityscapes/aberdeen-pavilion.jpg" alt="aberdeen pavilion">
+        <p>Aberdeen Pavilion</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/cityscapes/bank-street-1.jpg" alt="Bank Street 1">
+        <p>Bank Street 1</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/cityscapes/irenes-pub.jpg" alt="Irene's Pub">
+        <p>Irene's Pub</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/cityscapes/smiths-bar.jpg" alt="Smith's Bar">
+        <p>Smith's Bar</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/cityscapes/wild-oat.jpg" alt="Wild Oat">
+        <p>Wild Oat</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/cityscapes/escalator-1.jpg" alt="Escalator 1">
+        <p>Escalator 1</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+    </section>
+    <section class="vehicles">
+      <h3>Vehicles</h3>
+      <div>
+        <img src="images/vehicles/tram-9.jpg" alt="Tram 9">
+        <p>Tram 9</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/vehicles/vespa.jpg" alt="Vespa">
+        <p>Vespa</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/vehicles/cinquecento.jpg" alt="Cinquecento">
+        <p>Cinquecento</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/vehicles/59 Dodge.jpg" alt="59 Dodge">
+        <p>59 Dodge</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+    </section>
+    <section class="flora">
+      <h3>Flora</h3>
+      <div>
+        <img src="images/flora/artichokes.jpg" alt="Artichokes">
+        <p>Artichokes</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/flora/asparagus.jpg" alt="Asparagus">
+        <p>Asparagus</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/flora/autumn-leaves-1.jpg" alt="Autumn Leaves 1">
+        <p>Autumn Leaves 1</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/flora/autumn-leaves-2.jpg" alt="Autumn Leaves 2">
+        <p>Autumn Leaves 2</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/flora/pomodori-oil.jpg" alt="Pomodori Oil">
+        <p>Pomodori</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/flora/pomodori-watercolor.jpg" alt="Pomodori Watercolor">
+        <p>Pomodori</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+    </section>
+    <section class="fauna">
+      <h3>Cityscapes</h3>
+      <div>
+        <img src="images/fauna/Giraffe.jpg" alt="Giraffe">
+        <p>Giraffe</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/fauna/hornbill.jpg" alt="Hornbill">
+        <p>Hornbill</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/fauna/kingfisher.jpg" alt="Kingfisher">
+        <p>Kingfisher</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/fauna/kudu.jpg" alt="Kudu">
+        <p>Kudu</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/fauna/rhino.jpg" alt="Rhino">
+        <p>Rhino</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/fauna/starling.jpg" alt="Starling">
+        <p>Starling</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/fauna/tawny-eagle.jpg" alt="Tawny Eagle">
+        <p>Tawny Eagle</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/fauna/zebra-1.jpg" alt="Zebra 1">
+        <p>Zebra 1</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/fauna/zebra-2.jpg" alt="Zebra 2">
+        <p>Zebra 2</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+      <div>
+        <img src="images/fauna/zebras.jpg" alt="Zebras">
+        <p>Zebras</p>
+        <p><b>Original Painting: $1000</b></p>
+        <p><b>11"x17" print: $50</b></p>
+      </div>
+    </section>
   </main>
   <footer role="contentinfo" class="footer">
     <a href="https://www.instagram.com/danehamblin_art/"><img src="images/icons/instagram-logo.svg.webp"></a>
